# bbb_os

./: .gitignore  Makefile  Makefile.variables  README.md  root@192.168.7.2
apps/: Makefile
apps/olaf/: Makefile  olafd.c
apps/olafd/: Makefile  olafd.c  olafd.h
build-console-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  console  console.cbp
build-console-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-ccd0380a75cb652cf6f1.json  cmakeFiles-v1-f3e0a69d023aaf887b37.json  codemodel-v2-6b67117b8d738c31b3f3.json  index-2020-12-12T16-36-50-0017.json  target-console-Debug-9a28cea835d5f1793e84.json  target-console_autogen-Debug-d550b29a77c4e91361d7.json
build-console-Desktop-Debug/console_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-console-Desktop-Debug/console_autogen/include/: ui_mainwindow.h
console/: CMakeLists.txt  Makefile  console.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  olaf_client.c  olafclient.cpp  olafclient.h  olafstatuscheker.cpp  olafstatuscheker.h
console/docs/: id_rsa.pub
console/include/: debug.h  mainwindow.h  net.h  olafclient.h  olafpinger.h  olafstatuscheker.h
console/src/: CMakeLists.txt  console.cpp  mainwindow.cpp  olafclient.cpp  olafpinger.cpp  olafstatuscheker.cpp
daemons/: Makefile
daemons/olaf/: Makefile  olaf.h  olaf_client  olaf_client.c  olafd.c  olafd.h
include/bone/: ioctl.h  node.h  olaf.h  olaf_api.h  olaf_commands.h  pd.h  system.h
include/bone/api/: ioclt.h  olaf_api.h  olaf_commands.h
libs/: Makefile  libolaf.c
libs/libolaf/: Makefile  libolaf.c
libs/libolaf/include/olaf/: olaf.h
modules/: Makefile
modules/hardware/: pd_driver_dt.c
modules/main/: main_module.c  node.c  system.c
rootfs/etc/: fstab  passwd  shadow
rootfs/etc/dropbear/: dropbear_dss_host_key  dropbear_rsa_host_key
rootfs/etc/init.d/: S01logging  S02drivers  S20bone  S40networking  rcS
rootfs/etc/network/: interfaces
uboot_stuff/: MLO  README.md  u-boot.img  uEnv.txt  uboot.env
